force-app/main/default/objects/b3o__Session_Schedule__c/b3o__Session_Schedule__c.object-meta.xml
<CustomObject>
    <label>Session Schedule</label>
    <nameField>
        <displayFormat>SESSION-S-{0}</displayFormat>
        <label>Session Schedule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Session Schedules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>