force-app/main/default/objects/b3o__Session_Schedule__c/fields/b3o__Booked__c.field-meta.xml
<CustomField>
    <fullName>b3o__Booked__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Auto-Calculated - the number of confirmed bookings for this schedule</inlineHelpText>
    <label>Booked</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>