force-app/main/default/objects/b3o__Session_Schedule__c/fields/b3o__End_Time__c.field-meta.xml
<CustomField>
    <fullName>b3o__End_Time__c</fullName>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>