force-app/main/default/objects/b3o__Session_Schedule__c/fields/b3o__Openings__c.field-meta.xml
<CustomField>
    <fullName>b3o__Openings__c</fullName>
    <label>Openings</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>