force-app/main/default/objects/b3o__Session_Schedule__c/fields/b3o__Session__c.field-meta.xml
<CustomField>
    <fullName>b3o__Session__c</fullName>
    <label>Session</label>
    <referenceTo>b3o__Session__c</referenceTo>
    <relationshipLabel>Session Schedules</relationshipLabel>
    <relationshipName>Session_Schedules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>