force-app/main/default/objects/b3o__Session_Schedule__c/fields/b3o__Session_Name__c.field-meta.xml
<CustomField>
    <fullName>b3o__Session_Name__c</fullName>
    <label>Session Name</label>
    <type>TextArea</type>
</CustomField>