force-app/main/default/objects/b3o__Session_Schedule__c/fields/b3o__Status__c.field-meta.xml
<CustomField>
    <fullName>b3o__Status__c</fullName>
    <formula>if( b3o__Booked__c &gt;=  b3o__Openings__c, &apos;Fully Booked&apos;, &apos;Open&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>