force-app/main/default/objects/b3o__Session_Schedule__c/validationRules/b3o__Must_have_openings.validationRule-meta.xml
<ValidationRule>
    <fullName>b3o__Must_have_openings</fullName>
    <active>true</active>
    <errorConditionFormula>b3o__Openings__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>b3o__Openings__c</errorDisplayField>
    <errorMessage>You must set a positive number to the Openings field</errorMessage>
</ValidationRule>